# formmonkeyplatform

./: .gitignore  AGENT_STATUS.md  MIGRATION_COMPLETE.md  PHASE_4_SCHEMA_FINAL.md  PROJECT_ANALYSIS.md  PreviewSummary.tsx  README.md  analyze_project.py  fix_imports_script.py  import_fixes_report.txt  package.json  project-tree.txt  project_analysis.json  tsconfig.base.json  tsconfig.json
apps/cli/: package.json  tsconfig.json
apps/frontend/: package.json  tsconfig.json
backend/: config.py  main.py  requirements.txt
backend/ai/: ml_integration.py
backend/auth/: auth_utils.py
backend/compliance/: audit_log.py
backend/middleware/: validation.py
backend/routers/: export.py  parse.py  profile.py  upload.py
backend/services/: ai_assistance.py  export_service.py  master_profile.py  parser_engine.py  storage_service.py
backend/shared/: __init__.py  (+1 more)
docs/: ai-error-handling-strategy.md  ai-pipeline-status.md  correction-workflow-analysis.md  validation-implementation.md  validation-strategy.md
frontend/: .gitkeep  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: check_imports.py  cleanup.sh  enforce_phase0.sh
shared/: BACKEND_TYPE_MIGRATION.md  FRONTEND_TYPE_MIGRATION.md  MODULE_RENAME_NOTICE.md  README.md  constants.py  constants.ts  index.py  index.ts  logger.py  package-lock.json  package.json  prompts.ts  pyproject.toml  schemas.py  storage.py  tsconfig.json  type_checker.py  type_migration.py  type_migration.ts  type_strategy.py  type_strategy.ts  types.js  types.py  types.ts  utils.py  utils.ts  validators.ts
(+71 files in other folders)
